Pom update for maven central